# volume-viewer

./: .gitignore  Cargo.toml  README.md  index.html  loader-interface.js  loader.js  offscreen_renderer.js  package-lock.json  package.json  rust-toolchain.toml  shared-gpu.js  worker.js  worker2.js
.cargo/: config  config.toml
.github/workflows/: test.yml
crates/include_preprocessed_wgsl/: Cargo.toml
crates/include_preprocessed_wgsl/src/: lib.rs
crates/numcodecs-wasm/: Cargo.toml
crates/numcodecs-wasm/src/: lib.rs
crates/ome-ngff/: Cargo.toml
crates/ome-ngff/src/: axes.rs  axis.rs  coordinate_transformations.rs  image_labels.rs  lib.rs  metadata.rs  multi_scales.rs  multiscale.rs  multiscales.rs  omero.rs  plate.rs  util.rs  validation.rs  well.rs
crates/ome-ngff/src/image_label/: mod.rs  v0_1.rs  v0_2.rs
crates/ome-ngff/src/multiscale/: mod.rs  v0_2.rs  v0_3.rs  v0_4.rs
crates/ome-ngff/src/omero/: mod.rs  v0_1.rs
crates/ome-ngff/src/plate/: mod.rs  v0_1.rs  v0_4.rs
crates/ome-zarr/: Cargo.toml
crates/ome-zarr/src/: lib.rs
crates/wgpu-framework/: Cargo.toml
crates/wgpu-framework/.cargo/: config.toml
crates/wgpu-framework/src/: lib.rs
crates/wgpu-framework/src/app/: mod.rs
crates/wgpu-framework/src/context/: mod.rs
crates/wgpu-framework/src/event/: lifecycle.rs  mod.rs  web.rs  window.rs
crates/wgpu-framework/src/geometry/: bounds.rs
crates/wgpu-framework/src/gpu/: buffer.rs  mod.rs  query_set.rs
crates/wgpu-framework/src/input/: frame.rs  keyboard.rs  mod.rs  mouse.rs  time.rs
crates/wgpu-framework/src/mesh/: base_vertex.wgsl  mod.rs  vertex.rs
crates/wgpu-framework/src/renderer/: drawable.rs
crates/wgpu-framework/src/scene/: light.rs  mod.rs  transform.rs
crates/wgpu-framework/src/scene/camera/: mod.rs
crates/wgpu-framework/src/util/: math.rs  mod.rs  web.rs  window.rs
crates/wgsl-preprocessor/: Cargo.toml
crates/wgsl-preprocessor/src/: error.rs  lib.rs  preprocessor.rs
crates/zarr-wasm/: Cargo.toml
crates/zarr-wasm/src/: data_type.rs  group.rs  lib.rs  persistence_mode.rs  raw.rs  zarr.rs
js/src/: data-loading-thread.js  event.js  offscreen_renderer.js  shared-gpu.js  volume-data-source.js  volume-renderer-thread.js  volume-renderer.js
src/: lib.rs
src/app/: mod.rs
src/app/renderer/: common.rs  mod.rs  uniforms.rs
src/app/renderer/dvr/: common.rs  mod.rs  ray_cast.wgsl  ray_cast_base.wgsl
src/app/renderer/dvr/octree_reference/: mod.rs  ray_cast.wgsl
src/app/renderer/dvr/page_table/: mod.rs  page_table_volume_accessor.wgsl
src/app/renderer/dvr/page_table_octree/: compute_min_max_values.wgsl  mod.rs  octree_update.wgsl  page_table_octree_volume_accessor.wgsl  process_mapped_bricks.wgsl  ray_cast.wgsl  set_up_next_level_update.wgsl  update_leaf_nodes.wgsl  update_node_min_max_values.wgsl  update_non_leaf_nodes.wgsl
src/app/scene/: camera.rs  mod.rs  volume.rs
src/event/: conversion.rs  event.rs  handler.rs  mod.rs
src/framework/event/: lifecycle.rs
src/gpu_list/: mod.rs
src/input/: mod.rs
src/page_table/: mod.rs
src/preprocessing/: mod.rs
src/renderer/: camera.rs  context.rs  edgedetect.wgsl  edgedetect_3d.wgsl  geometry.rs  gpu_list.rs  mod.rs  pass.rs  resources.rs  settings.rs  shader.wgsl  trivial_volume_renderer.rs  volume.rs  z_slice.wgsl
src/renderer/pass/: mod.rs
src/renderer/pass/dvr/: dvr.wgsl  mod.rs  ray_cast.wgsl
src/renderer/pass/present_to_screen/: mod.rs  present_to_screen.wgsl
src/renderer/pass/process_requests/: mod.rs  process_requests.wgsl
src/renderer/pass/ray_guided_dvr/: mod.rs  ray_cast.wgsl
src/renderer/pass/scan/: add.wgsl  mod.rs  scan.wgsl
src/renderer/passes/: mod.rs
src/renderer/passes/dvr/: bresenham3d.wgsl  dvr.wgsl  mod.rs  ray_cast.wgsl
src/renderer/passes/normalize_z_slice/: mod.rs  normalize_z_slice.wgsl
src/renderer/passes/present_to_screen/: mod.rs  present_to_screen.wgsl
src/renderer/present_to_screen/: mod.rs
src/renderer/resource/: buffer.rs  mod.rs  texture.rs
src/renderer/resource/sparse_residency/texture3d/: data_source.rs  mod.rs  page_table.rs  volume_meta.rs
src/renderer/wgsl/: aabb.wgsl  bar.wgsl  baz.wgsl  camera.wgsl  constant.wgsl  foo.wgsl  gpu_list.wgsl  mod.rs  page_table.wgsl  shared_constants.rs  type_alias.wgsl  util.wgsl  voxel_line_f32.wgsl  voxel_line_i32.wgsl
src/resource/: buffer.rs  mod.rs  texture.rs
src/resource/sparse_residency/: mod.rs
src/resource/sparse_residency/texture3d/: brick_cache_update.rs  data_source.rs  mod.rs  page_table.rs  volume_meta.rs
src/sparse_residency_resource/texture3d/: data_source.rs  mod.rs  page_table.rs  volume_meta.rs
src/sparse_residency_resource/texture3d/algorithms/: mod.rs  process_requests.rs
src/timing/: mod.rs  monitoring.rs  timestamp_query_helper.rs
src/util/: extent.rs  init.rs  io.rs  mod.rs  multi_buffer.rs  to_bytes.rs  transmute.rs  vec.rs  vec_hash_map.rs  web.rs  window.rs
src/volume/: brick.rs  data_source.rs  meta.rs  mod.rs
src/volume/octree/: direct_access_tree.rs  mod.rs  octree_manager.rs  page_table_octree.rs  resolution_mapping.rs  storage.rs  subdivision.rs  top_down_tree.rs
src/volume/octree/update/: compute_min_max_values.wgsl  mod.rs  process_mapped_bricks.wgsl  set_up_next_level_update.wgsl  update_leaf_nodes.wgsl  update_node_min_max_values.wgsl  update_non_leaf_nodes.wgsl
src/volume_loader/: mod.rs
src/wgsl/: aabb.wgsl  bresenham.wgsl  cache_update_meta.wgsl  camera.wgsl  channel_settings.wgsl  constant.wgsl  dispatch_indirect.wgsl  gobal_settings.wgsl  gpu_list.wgsl  grid_leap.wgsl  grid_traversal.wgsl  lighting.wgsl  mod.rs  multichannel_octree_util.wgsl  octree_node.wgsl  octree_node_util.wgsl  octree_node_write_util.wgsl  output_modes.wgsl  page_directory_meta_util.wgsl  page_directory_util.wgsl  page_table.wgsl  page_table_util.wgsl  page_table_volume_accessor.wgsl  ray.wgsl  shared_constants.rs  sphere.wgsl  timestamp.wgsl  transform.wgsl  type_alias.wgsl  util.wgsl  volume_accessor.wgsl  volume_subdivision.wgsl  volume_subdivision_util.wgsl  volume_util.wgsl
tests/: web.rs
(+19 files in other folders)
