[package]
name = "volume-viewer"
version = "0.1.0"
authors = ["Lukas Herzberger <herzberger.lukas@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["crates/*"]

[features]
default = [
    "console_error_panic_hook"
]

[target.wasm32-unknown-unknown]
runner = 'wasm-bindgen-test-runner'

[dependencies]
bevy_app = "0.7.0"
bevy_ecs = "0.7.0"
bevy_utils = "0.7.0"
bevy_window = "0.7.0"
bevy_winit = "0.7.0"

bytemuck = "1.9.1"
futures-intrusive = "0.4.0"
instant = "0.1.12"
js-sys = "0.3.57"
log = "0.4.17"
pollster = "0.2.5"
reqwest = "0.11.10"
serde = "1.0.137"
serde_json = "1.0.81"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.57", features = ["Document", "HtmlCanvasElement", "GpuDevice"] }
wgpu = "0.12.0"
winit = "0.26.1"

# todo: get from cargo.io as soon as it's there
ome-ngff = { git = "https://github.com/JolifantoBambla/ome-ngff-metadata.git", features = ["log"] }
ome-zarr = { path = "crates/ome-zarr" }
numcodecs-wasm = { path = "crates/numcodecs-wasm" }
# blosc = "0.1.3" doesn't work out of the box, maybe try this later

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
