[package]
name = "zarr-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.57"
serde = "1.0.137"
serde_json = "1.0.81"
wasm-bindgen = { version = "0.2.63" }
wasm-bindgen-futures = "0.4.30"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"